name:                bytestring-parse
version:             0.1.0
synopsis:            Non-incremental bytestring parser
description:         Please see README.md
homepage:            https://github.com/andrewthad/bytestring-parse#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Martin
maintainer:          andrew.thaddeus@gmail.com
copyright:           2016 Andrew Martin
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:
    Data.ByteString.Parser
    -- Data.ByteString.Parser.Int
    Data.ByteString.Parser.Integral
    Data.ByteString.Incremental
    -- Data.ByteString.Another
    Data.Aeson.Grab
    Data.Aeson.Grab2
    Data.Aeson.Free
  default-language:    Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , bytestring
    , ghc-prim
    , vector
    , streaming-bytestring
    , streaming
    , profunctors
    , unordered-containers
    , aeson
    , text
    , scientific
    , transformers

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
      base
    , bytestring-parse
    , test-framework
    , test-framework-quickcheck2
    , QuickCheck
    , bytestring
    , HUnit
    , test-framework-hunit
  ghc-options: -Wall -O2
  default-language: Haskell2010
